--- a/templates/base.html
+++ b/templates/base.html
@@ -74,8 +74,9 @@
 
 
     {% block aa %}
-      <h1>base.htmlに記入したもの</h1>
+      <h1 class="text-center mt-5">aaaaa</h1>
     {% endblock aa %}
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
