--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
 
 
     {% block aa %}
-      <h1 class="text-center mt-5">aaaaa</h1>
+      <h1 class="text-center mt-1">　</h1>
     {% endblock aa %}
 
 
